--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
     </dependency>
+    
+    <dependency>
+	  <groupId>org.springdoc</groupId>
+	  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	  <version>2.8.11</version>
+	</dependency>
+
+
   </dependencies>
 
   <build>
