--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,20 @@
-# --- Datasource (PostgreSQL local) ---
-spring.datasource.url=jdbc:postgresql://localhost:5432/di2winaccount_database
-spring.datasource.username=postgres
-spring.datasource.password=Firework05142310!
+
+spring.config.import=optional:application-local.properties
+
+
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/di2win}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# --- JPA / Hibernate ---
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# (Optional) verbose logs
-# logging.level.org.hibernate.SQL=debug
-# logging.level.org.hibernate.orm.jdbc.bind=trace
 
-# --- Business rule ---
 withdraw.daily.limit=2000.00
+
+
+app.jwt.secret=${JWT_SECRET:change-me}
